@@ -1,12 +1,17 @@
 package com.marginallyclever.ro3.apps.pathtracer;
 
+import com.jogamp.opengl.GL3;
 import com.marginallyclever.convenience.Ray;
-import com.marginallyclever.convenience.helpers.MathHelper;
 import com.marginallyclever.ro3.Registry;
+import com.marginallyclever.ro3.mesh.Mesh;
+import com.marginallyclever.ro3.mesh.proceduralmesh.GenerativeMesh;
+import com.marginallyclever.ro3.mesh.proceduralmesh.Sphere;
 import com.marginallyclever.ro3.node.nodes.Material;
 import com.marginallyclever.ro3.node.nodes.environment.Environment;
+import com.marginallyclever.ro3.node.nodes.pose.Pose;
 import com.marginallyclever.ro3.node.nodes.pose.poses.Camera;
-import com.marginallyclever.ro3.raypicking.RayHit;
+import com.marginallyclever.ro3.node.nodes.pose.poses.MeshInstance;
+import com.marginallyclever.ro3.raypicking.Hit;
 import com.marginallyclever.ro3.raypicking.RayPickSystem;
 
 import javax.swing.*;
@@ -15,167 +20,329 @@ import javax.vecmath.Point3d;
 import javax.vecmath.Vector3d;
 import java.awt.*;
 import java.awt.image.BufferedImage;
+import java.beans.PropertyChangeEvent;
+import java.beans.PropertyChangeListener;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Random;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.prefs.Preferences;
 
+/**
+ * {@link PathTracer} performs multithreaded path tracing (aka ray tracing with bounces)
+ */
 public class PathTracer {
+    public static final int CHANNEL_VIEWPORT_U = 0;
+    public static final int CHANNEL_VIEWPORT_V = 0;
+    public static final int CHANNEL_HEMISPHERE_U = 0;
+    public static final int CHANNEL_HEMISPHERE_V = 0;
+    public static final int CHANNEL_RUSSIAN_ROULETTE = 4;
+    public static final int CHANNEL_LIGHT_SAMPLING = 5;
+    public static final int CHANNEL_BSDF_SAMPLING = 6;
+
+    private static final double EPSILON = 1e-6;
+
+    private int samplesPerPixel = 70;  // number of times to retest each pixel.  the results are then averaged.
+    private int maxDepth = 15;  // number of bounces per ray
+    private int minBounces = 5;  // minimum number of bounces before Russian roulette can kick in
+    private double lightSamplingProbability = 0.0;  // 0...1
+    private double maxContribution = 20.0;  // clamp the maximum contribution of a single bounce to avoid fireflies
+    private double exposure = 1.0;  // exposure multiplier
+    private boolean activateToneMap=true;  // apply simple tone mapping to the final color
+
     private final List<RayXY> rays = new ArrayList<>();
     private final RayPickSystem rayPickSystem = new RayPickSystem();
-    private RayTracingWorker rayTracingWorker;
+    private PathTracingWorker pathTracingWorker;
     private Camera activeCamera;
     private int canvasWidth = 640;
     private int canvasHeight = 480;
+    // stores the final color image of the scene
     private BufferedImage image;
+    // depth map
+    private BufferedImage depthMap;
+    private double deepestHit = 0.0; // the deepest hit in the scene, used for depth map scaling
+    // normal map
+    private BufferedImage normalMap;
 
-    private int samplesPerPixel = 500;
-    private int maxDepth = 3;
+
     private ColorDouble ambientColor = new ColorDouble(0.25,0.25,0.25,1);
     private ColorDouble sunlightColor = new ColorDouble(1,1,1,1);
     private double sunlightStrength = 1.0;
     private final Vector3d sunlightSource = new Vector3d(150,150,150);
-
     private final Material defaultMaterial = new Material();
     private long startTime;
-    private static final Random random = new Random();
 
     private final EventListenerList listeners = new EventListenerList();
 
+    private Pose displayContainer;
+    private Mesh displayMesh;
+
     public PathTracer() {
         super();
+        loadPreferences();
+        sunlightSource.normalize();
     }
 
-    public void render() {
-        if(rayTracingWorker!=null) {
-            rayTracingWorker.cancel(true);
-            rayTracingWorker = null;
-        } else {
-            getSunlight();
-            if(activeCamera==null) throw new RuntimeException("No active camera!");
-            if(canvasHeight==0 || canvasWidth==0) throw new RuntimeException("Canvas size is zero!");
+    public void stop() {
+        if(pathTracingWorker == null) return;
+        pathTracingWorker.cancel(true);
+        pathTracingWorker = null;
+    }
 
-            rays.clear();
-            for(int y=0;y<canvasHeight;y++) {
-                for(int x=0;x<canvasWidth;x++) {
-                    rays.add(new RayXY(x,y));
+    public void start() {
+        if(pathTracingWorker != null) return;
+
+        System.out.println("Starting PathTracer "+canvasHeight+"x"+canvasWidth+" @ "+samplesPerPixel + "spp, max depth "+maxDepth);
+
+        getSunlight();
+        if(activeCamera==null) throw new RuntimeException("No active camera!");
+        if(canvasHeight==0 || canvasWidth==0) throw new RuntimeException("Canvas size is zero!");
+
+        firePending();
+        if(displayContainer!=null) {
+            if(Registry.getScene().getChildren().contains(displayContainer)) {
+                Registry.getScene().removeChild(displayContainer);
+            }
+            displayContainer = null;
+        }
+        rayPickSystem.reset(true);
+        deepestHit = 0;
+        fireStarted();
+        pathTracingWorker = new PathTracingWorker(rays, image);
+        pathTracingWorker.execute();
+    }
+
+    private void allocateRays() {
+        rays.clear();
+        for(int y=0;y<canvasHeight;y++) {
+            for(int x=0;x<canvasWidth;x++) {
+                rays.add(new RayXY(x,y));
+            }
+        }
+    }
+
+    /**
+     * March the ray through the scene.  This is the core of the path tracer.
+     * @param ray the ray to trace
+     * @param pixel the pixel in which to store the result.
+     */
+    private void trace(Ray ray,RayXY pixel) {
+        ColorDouble radiance = new ColorDouble(0, 0, 0);
+        ColorDouble throughput = new ColorDouble(1, 1, 1, 1);
+        Hit prevHit=null;
+        Ray prevRay=null;
+        ScatterRecord prevScatter=null;
+
+        int depth;
+        for (depth = 0; depth < maxDepth; ++depth) {
+            if(depth >= minBounces && russianRouletteTermination(throughput,pixel)) break;
+
+            // get the first hit along the ray
+            Hit hit = rayPickSystem.getFirstHit(ray);
+            pixel.addRayHistory(new Ray(ray), hit);
+            if (hit == null) {
+                // hit nothing
+                var sky = new ColorDouble(getSkyColor(ray));
+                sky.multiply(throughput);
+                radiance.add(sky);
+                break;
+            }
+
+            // first hit on something.  record the depth and normal.
+            if(pixel.samples==0 && depth==0) {
+                // if this is the first hit, record the depth and the deepest hit.
+                pixel.depth = hit.distance();
+                deepestHit = Math.max(deepestHit, pixel.depth);
+                pixel.normal = hit.normal();
+            }
+
+            // does this material emit light?
+            Material mat = RayPickSystem.getMaterial(hit.target());
+            if(mat == null) mat = defaultMaterial;
+            if(mat.isEmissive()) {
+                handleEmissiveHit(ray, hit,prevRay,prevHit,throughput,radiance,mat,prevScatter);
+                break;
+            }
+
+            ScatterRecord scatterRecord = mat.scatter(ray, hit,pixel);
+            if(!scatterRecord.isSpecular) {
+                // probabilistic light sampling AKA Next Event Estimation (NEE)
+                double p = pixel.halton.nextDouble(CHANNEL_LIGHT_SAMPLING);
+                if (p < lightSamplingProbability) {
+                    probabilisticLightSampling(p, ray, hit, mat, throughput, radiance,pixel);
                 }
             }
 
-            rayTracingWorker = new RayTracingWorker(rays, image);
-            rayTracingWorker.execute();
+            prevHit = hit;
+            prevRay = ray;
+            prevScatter = scatterRecord;
+
+            // pick the next ray direction
+            ray = new Ray(hit.point(), scatterRecord.ray.getDirection());
+            throughput.multiply(scatterRecord.attenuation);
+            if(throughput.r<EPSILON && throughput.g<EPSILON && throughput.b<EPSILON) {
+                // no more light to bounce
+                break;
+            }
         }
+
+        pixel.add(radiance,exposure,activateToneMap);
     }
 
     /**
-     * <p>Trace the ray and return the color of the pixel at the end of the ray.</p>
-     * @param ray the ray to trace
-     * @return the color of the pixel at the end of the ray.
+     * Probabilistic light sampling with Multiple Importance Sampling (MIS).
+     * @param p the probability of selecting this strategy
+     * @param ray the current ray
+     * @param hit the current ray hit
+     * @param mat the material at the ray hit
+     * @param throughput the current throughput of the ray
+     * @param radiance the accumulated radiance
      */
-    private ColorDouble trace(Ray ray) {
-        ColorDouble incomingLight = new ColorDouble(0, 0, 0);
-        ColorDouble rayColor = new ColorDouble(1, 1, 1, 1);
+    private void probabilisticLightSampling(double p, Ray ray, Hit hit, Material mat, ColorDouble throughput, ColorDouble radiance, RayXY pixel) {
+        // get an emissive surface
+        Hit emissiveHit = rayPickSystem.getRandomEmissiveSurface();
+        if(emissiveHit == null) return;
 
-        for (int i = 0; i <= maxDepth; ++i) {
-            RayHit rayHit = rayPickSystem.getFirstHit(ray);
-            if (rayHit == null) {
-                var sky = getSkyColor(ray);
-                sky.scale(rayColor);
-                incomingLight.add(sky);
-                break;
-            }
+        Vector3d wi = new Vector3d();
+        wi.sub(emissiveHit.point(), hit.point());
+        double distanceSquared = wi.lengthSquared();
+        wi.normalize();
 
-            var mat = getMaterial(rayHit);
-            var albedo = new ColorDouble(mat.getDiffuseColor());
+        // shoot a shadow ray to see if the light is visible
+        Point3d origin = new Point3d();
+        origin.scaleAdd(EPSILON, hit.normal(), hit.point());
+        Ray lightRay = new Ray(origin, wi);
+        Hit lightHit = rayPickSystem.getFirstHit(lightRay);
+        pixel.addRayHistory(new Ray(lightRay),lightHit);
+        if(lightHit == null) return; // occluded
 
-            var emittedLight = new ColorDouble(mat.getEmissionColor());
-            emittedLight.scale(mat.getEmissionStrength());
-            emittedLight.scale(rayColor);
+        // hit a thing
+        var mat2 = RayPickSystem.getMaterial(lightHit.target());
+        if(mat2 == null) mat2 = defaultMaterial;
+        if(!mat2.isEmissive()) return;
 
-            incomingLight.add(emittedLight);
+        Vector3d wo = ray.getWo();
+        ColorDouble brdf = mat.lightSamplingBRDF(hit,wi,wo);
 
-            boolean isSpecularBounce = mat.getSpecularStrength() > random.nextDouble();
-            rayColor.scale(isSpecularBounce ? new ColorDouble(mat.getSpecularColor()) : albedo);
-
-            // monte carlo russian roulette
-            double average = (rayColor.r + rayColor.g + rayColor.b ) / 3;
-            //double average = 0.2126*rayColor.r + 0.7152*rayColor.g + 0.0722*rayColor.b;
-            double p = 1.0/Math.max(1e-6,average);
-            if( random.nextDouble() > average) {
-                incomingLight.scale(average == 0 ? 0 : p);
-                break;
-            }
-            rayColor.scale(p);
-
-            // Calculate Fresnel reflectance
-            double cosTheta = rayHit.normal().dot(ray.getDirection());
-            boolean entering = cosTheta < 0;
-            //double ior1 = entering ? 1.0 : mat.getIOR(); // Air IOR = 1.0
-            //double ior2 = entering ? mat.getIOR() : 1.0;
-            //double reflectance = computeFresnel(Math.abs(cosTheta), ior1, ior2);
-
-            // Handle refraction or reflection based on Fresnel reflectance
-            if(albedo.a<1.0) {
-                // this will return either the reflected or refracted ray
-                Ray r3 = getRefraction(ray,rayHit.point(),rayHit.normal(),mat);
-                ray.setOrigin(rayHit.point());
-                ray.setDirection(r3.getDirection());
-                continue;
-            }
-
-            // opaque
-            ray.setOrigin(rayHit.point());
-            // get the cosine weighted random direction
-            var diffuseDirection = getRandomUnitVector();
-            diffuseDirection.add(rayHit.normal());
-            diffuseDirection.normalize();
-            if (diffuseDirection.lengthSquared() < 1e-6) {
-                // edge case where diffuseDirection is zero.
-                diffuseDirection.set(rayHit.normal());
-            }
-
-            Vector3d specularDirection = reflect(ray.getDirection(),rayHit.normal());
-            var dir = MathHelper.interpolate(diffuseDirection, specularDirection, (isSpecularBounce ? mat.getReflectivity() : 0));
-            dir.normalize();
-            ray.setDirection(dir);
+        double area;
+        if(lightHit.target().getMesh() instanceof Sphere sphere) {
+            area = 4.0 * Math.PI * Math.pow(sphere.radius,2);
+        } else {
+            area = lightHit.triangle().getArea();
         }
+        double cosThetaLight = Math.max(0, -lightHit.normal().dot(wi));
+        double pdfLight = Math.max(EPSILON, pdfLightSolidAngle(area,distanceSquared,cosThetaLight));
+        double pdfBSDF = mat.getPDF(hit,wi,wo);
 
-        return incomingLight;
-    }
+        // Include strategy selection probabilities in MIS
+        double pl = pdfLight * p;
+        double pb = pdfBSDF * (1.0 - p);
+        double wBSDF = misWeight(pb,pl);
 
-    private double computeFresnel(double cosTheta, double ior1, double ior2) {
-        double r0 = Math.pow((ior1 - ior2) / (ior1 + ior2), 2);
-        return r0 + (1 - r0) * Math.pow(1 - cosTheta, 5);
+        // contribution
+        ColorDouble contribution = new ColorDouble(mat2.getEmittedLight());
+        contribution.multiply(brdf);
+        contribution.scale( 1.0 / (pdfLight*p));
+        contribution.multiply(throughput);
+        contribution.scale(wBSDF);
+        contribution.clamp(0, maxContribution);
+
+        radiance.add(contribution);
     }
 
     /**
-     * <p>Refract the ray and return the refracted vector.</p>
-     * @param incident  the incident vector
-     * @param normal   the normal at the hit point
-     * @param iorRatio the ratio of the refractive indices of the two materials
-     * @return the refracted vector
+     * @param throughput the current throughput of the ray
+     * @return true if the path should terminate
      */
-    private Vector3d refract2(Vector3d incident, Vector3d normal, double iorRatio) {
-        double cosI = -normal.dot(incident);
-        double sin2T = iorRatio * iorRatio * (1 - cosI * cosI);
+    private boolean russianRouletteTermination(ColorDouble throughput,RayXY pixel) {
+        double maxThroughput = Math.max(throughput.r, Math.max(throughput.g, throughput.b));
+        if(maxThroughput == 1.0) return false;
 
-        // Total internal reflection
-        if (sin2T > 1.0) {
-            return null;
-        }
+        double p = Math.max(0.05,maxThroughput);  // limit the probability of stopping
+        if (pixel.halton.nextDouble(CHANNEL_RUSSIAN_ROULETTE) > p) return true;
 
-        double cosT = Math.sqrt(1.0 - sin2T);
-        Vector3d refracted = new Vector3d();
-        refracted.scale(iorRatio, incident);
-        refracted.scaleAdd(iorRatio * cosI - cosT, normal, refracted);
-        return refracted;
+        throughput.scale(1.0 / p);  // adjust throughput to account for the probability of stopping
+        return false;
     }
 
-    private Material getMaterial(RayHit rayHit) {
-        var meshInstance = rayHit.target();
-        if(meshInstance==null) return defaultMaterial;
-        var mat = meshInstance.findFirstSibling(Material.class);
-        return mat == null ? defaultMaterial : mat;
+    /**
+     * Handle direct hits to emissive surfaces.
+     * @param ray the current ray
+     * @param hit the current ray hit
+     * @param prevRay the previous ray, or null if this is the first ray
+     * @param prevHit the previous ray hit, or null if this is the first hit
+     * @param throughput the current throughput of the ray
+     * @param radiance the accumulated radiance
+     * @param mat the emissive material
+     * @param prevScatter the scatter record of the previous hit, or null if this is the first hit
+     */
+    private void handleEmissiveHit(Ray ray, Hit hit, Ray prevRay, Hit prevHit, ColorDouble throughput, ColorDouble radiance, Material mat, ScatterRecord prevScatter) {
+        if(prevHit == null) {
+            // First bounce: no MIS, just add light directly
+            ColorDouble emittedLight = mat.getEmittedLight();
+            emittedLight.multiply(throughput);
+            emittedLight.clamp(0, maxContribution);
+            radiance.add(emittedLight);
+            return;
+        }
+
+        var prevMat = RayPickSystem.getMaterial(prevHit.target());
+        if(prevMat == null) prevMat = defaultMaterial;
+
+        Vector3d wi = new Vector3d(ray.getDirection());
+        Vector3d wo = prevRay.getWo();
+
+        Point3d prevPoint = ray.getOrigin();
+        Point3d lightPoint = hit.point();
+
+        double distanceSquared = lightPoint.distanceSquared(prevPoint);
+        Vector3d lightDir = new Vector3d();
+        lightDir.sub(lightPoint, prevPoint);
+        lightDir.normalize();
+        double cosThetaLight = Math.max(0.0, -hit.normal().dot(lightDir));
+
+        ColorDouble emittedLight = mat.getEmittedLight();
+
+        // if the previous bounce was specular we can only have come from the BSDF sampling
+        // so we don't need to do MIS.
+        if(prevScatter.type != ScatterRecord.ScatterType.SPECULAR) {
+            double area;
+            if(hit.target().getMesh() instanceof Sphere sphere) {
+                area = 4.0 * Math.PI * Math.pow(sphere.radius,2);
+            } else {
+                area = hit.triangle().getArea();
+            }
+
+            double pdfBSDF = prevMat.getPDF(prevHit, wi, wo);
+            double pdfLight = Math.max(EPSILON,
+                    pdfLightSolidAngle(area, distanceSquared, cosThetaLight));
+            double wBSDF = misWeight(pdfLight,pdfBSDF);
+            emittedLight.scale(wBSDF);
+        }
+
+        emittedLight.multiply(throughput);
+        emittedLight.clamp(0, maxContribution);
+        radiance.add(emittedLight);
+    }
+
+    private double pdfLightSolidAngle(double lightArea, double distanceSquared,double cosThetaLight) {
+        if (cosThetaLight <= 0.0) {
+            return 0.0; // back-facing, zero probability
+        }
+        double pA = 1.0 / lightArea; // uniform on area
+        return (pA * distanceSquared) / cosThetaLight;
+    }
+
+    /**
+     * Calculate the Multiple Importance Sampling (MIS) weight using the power heuristic.
+     *
+     * @param pdfA probability density function value for strategy A
+     * @param pdfB probability density function value for strategy B
+     * @return the MIS weight for balancing between the two sampling strategies
+     */
+    private static double misWeight(double pdfA, double pdfB) {
+        double a2 = pdfA * pdfA;
+        double b2 = pdfB * pdfB;
+        return a2 / (a2 + b2);
     }
 
     /**
@@ -186,12 +353,8 @@ public class PathTracer {
     private ColorDouble getSkyColor(Ray ray) {
         Vector3d d = ray.getDirection();
         d.normalize();
-        Vector3d sun = new Vector3d(sunlightSource);
-        sun.normalize();
-        var dot = Math.max(0,sun.dot(d));
-
-        var sd = Math.pow(dot,5);
-        //var a = 0.5 * (-d.z + 1.0);
+        var dot = Math.clamp(sunlightSource.dot(d),0,1);
+        var sd = Math.pow(dot,16);
         var a = 1.0-sd;
         return new ColorDouble(
                 a * ambientColor.r + sd * sunlightColor.r * sunlightStrength,
@@ -200,172 +363,10 @@ public class PathTracer {
     }
 
     /**
-     * Get the refracted ray
-     * @param ray the ray to refract
-     * @param hitPoint the point where the ray hit
-     * @param normal the normal at the hit point
-     * @param mat the material at the hit point
-     * @return the next ray to trace
+     * Get the timestamp when the path tracing started.
+     *
+     * @return the start time in milliseconds
      */
-    private Ray getRefraction(Ray ray, Point3d hitPoint, Vector3d normal, Material mat) {
-        // at least semi-transparent.  use index of refraction.
-        var rayDirection = ray.getDirection();
-        rayDirection.normalize();
-
-        var ior = mat.getIOR();
-        var cosTheta = Math.min(-normal.dot(rayDirection),1.0);
-        // since normals face outside an object, if cosTheta is positive the ray is exiting the object.
-        boolean backFace = cosTheta > 0;
-        if(backFace) normal.negate();
-
-        var ri = backFace ? 1.0/ior : ior;
-        var sinTheta = Math.sqrt(1.0-cosTheta*cosTheta);
-        var cannotRefract = ri * sinTheta > 1.0;
-        var nextDir = cannotRefract || reflectance(cosTheta,ri) > random.nextDouble()
-                ? reflect(rayDirection,normal) // total internal reflection
-                : refract(rayDirection,normal,ri); // refraction
-
-        // Recursively compute the color along the next ray
-        return new Ray(hitPoint, nextDir);
-    }
-
-    private void toneMap(ColorDouble d) {
-        acesApprox(d);
-    }
-
-    private void acesApprox(ColorDouble v) {
-        v.scale(0.6);
-        double a = 2.51;
-        double b = 0.03;
-        double c = 2.43;
-        double d = 0.59;
-        double e = 0.14;
-        v.r = Math.max(0,Math.min(1, (v.r * (a*v.r+b)) / (v.r * (c*v.r+d)+e) ));
-        v.g = Math.max(0,Math.min(1, (v.g * (a*v.g+b)) / (v.g * (c*v.g+d)+e) ));
-        v.b = Math.max(0,Math.min(1, (v.b * (a*v.b+b)) / (v.b * (c*v.b+d)+e) ));
-    }
-
-    /**
-     * @param a the first color
-     * @param b the second color
-     * @param alpha the blend factor (0...1)
-     * @return a * alpha + b * (1-alpha)
-     */
-    private ColorDouble blend(ColorDouble a,ColorDouble b,double alpha) {
-        double oneMinusAlpha = 1.0-alpha;
-        return new ColorDouble(
-                a.r * alpha + b.r * oneMinusAlpha,
-                a.g * alpha + b.g * oneMinusAlpha,
-                a.b * alpha + b.b * oneMinusAlpha
-        );
-    }
-
-    /**
-     * Use Shlick's approximation for reflectance
-     * @param cosI the cosine of the angle of incidence
-     * @param eta the ratio of the refractive indices of the two materials
-     * @return the reflectance
-     */
-    private double reflectance(double cosI, double eta) {
-        var r0 = (1.0-eta) / (1.0+eta);
-        r0 *= r0;
-        return r0 + (1.0-r0) * Math.pow(1.0-cosI,5);
-    }
-
-    /**
-     * Reflect the vector v off the normal n
-     * @param v the vector to reflect
-     * @param n the normal
-     * @return the reflected vector
-     */
-    private Vector3d reflect(Vector3d v, Vector3d n) {
-        var dot = 2.0 * v.dot(n);
-        return new Vector3d(
-                v.x - n.x * dot,
-                v.y - n.y * dot,
-                v.z - n.z * dot);
-    }
-
-    /**
-     * Refract the vector uv through the normal n
-     * @param uv the vector to refract
-     * @param n the normal
-     * @param eta the ratio of the refractive indices of the two materials
-     * @return the refracted vector
-     */
-    private Vector3d refract(Vector3d uv, Vector3d n, double eta) {
-        var cosTheta = Math.min(-uv.dot(n), 1.0);
-        // vec3 r_out_perp =  etai_over_etat * (uv + cos_theta*n);
-        Vector3d outPerpendicular = new Vector3d(n);
-        n.scaleAdd(cosTheta,uv);
-        n.scale(eta);
-        // vec3 r_out_parallel = -sqrt(abs(1.0 - r_out_perp.length_squared())) * n;
-        Vector3d outParallel = new Vector3d(n);
-        outParallel.scale(-Math.sqrt(Math.abs(1.0 - outPerpendicular.lengthSquared())));
-        outPerpendicular.add(outParallel);
-        return outPerpendicular;
-    }
-
-    /**
-     * @return a random vector on the unit sphere
-     */
-    private static Vector3d getRandomUnitVector() {
-        double t1 = random.nextDouble() * 2.0 * Math.PI;
-        var y = (random.nextDouble() - 0.5) * 2.0;
-        double t2 = Math.sqrt(1.0 - y*y);
-        var x = t2 * Math.cos(t1);
-        var z = t2 * Math.sin(t1);
-        return new Vector3d(x,y,z);
-    }
-
-    /**
-     * <p>Return the ray, in world space, that starts at the camera and passes through this viewport at (x,y) in the
-     * current projection.  x,y should be normalized screen coordinates adjusted for the vertical flip.</p>
-     * <p>Remember that in OpenGL the camera -Z=forward, +X=right, +Y=up</p>
-     * @param normalizedX the cursor position in screen coordinates [-1,1]
-     * @param normalizedY the cursor position in screen coordinates [-1,1]
-     * @return the ray coming through the viewport in the current projection.
-     */
-    public Ray getRayThroughPoint(Camera camera, double normalizedX, double normalizedY) {
-        Ray r = getRayThroughPointUntransformed(camera,normalizedX,normalizedY);
-        Ray transformedRay = new Ray();
-        // adjust by the camera world orientation.
-        transformedRay.transform(camera.getWorld(),r);
-        return transformedRay;
-    }
-
-    /**
-     * <p>Return the ray, in camera space, that starts at the origin and passes through this viewport at (x,y) in the
-     * current projection.  x,y should be normalized screen coordinates adjusted for the vertical flip.</p>
-     * <p>Remember that in OpenGL the camera -Z=forward, +X=right, +Y=up</p>
-     * @param normalizedX the cursor position in screen coordinates [-1,1]
-     * @param normalizedY the cursor position in screen coordinates [-1,1]
-     * @return the ray coming through the viewport in the current projection.
-     */
-    public Ray getRayThroughPointUntransformed(Camera camera,double normalizedX,double normalizedY) {
-        if(camera.getDrawOrthographic()) {
-            // orthographic projection
-            var origin = new Point3d(
-                    normalizedX*canvasWidth/2.0,
-                    normalizedY*canvasHeight/2.0,
-                    0);
-            var direction = new Vector3d(0,0,-1);  // forward in camera space
-
-            return new Ray(origin,direction);
-        } else {
-            // perspective projection
-            double t = Math.tan(Math.toRadians(camera.getFovY()/2));
-            var direction = new Vector3d(
-                    normalizedX*t*getAspectRatio(),
-                    normalizedY*t,
-                    -1);
-            direction.normalize();
-            var origin = new Point3d();
-
-            return new Ray(origin,direction);
-        }
-    }
-
     public long getStartTime() {
         return startTime;
     }
@@ -379,87 +380,313 @@ public class PathTracer {
         canvasWidth = width;
         canvasHeight = height;
         image = new BufferedImage(canvasWidth,canvasHeight,BufferedImage.TYPE_INT_RGB);
+        depthMap = new BufferedImage(canvasWidth, canvasHeight, BufferedImage.TYPE_INT_RGB);
+        normalMap = new BufferedImage(canvasWidth, canvasHeight, BufferedImage.TYPE_INT_RGB);
+        allocateRays();
     }
 
+    /**
+     * Get the rendered image buffer containing the path traced scene.
+     *
+     * @return the rendered image as a BufferedImage
+     */
     public BufferedImage getImage() {
         return image;
     }
 
+    /**
+     * Get the depth map buffer containing the distance information for each pixel.
+     *
+     * @return the depth map as a BufferedImage
+     */
+    public BufferedImage getDepthMap() {
+        return depthMap;
+    }
+
+    public BufferedImage getNormalMap() {
+        return normalMap;
+    }
+
+    /**
+     * Set the camera to be used for rendering the scene.
+     *
+     * @param camera the camera to use for path tracing
+     */
     public void setActiveCamera(Camera camera) {
         this.activeCamera = camera;
     }
 
-    private class RayTracingWorker extends SwingWorker<Void,Integer> {
+    /**
+     * Check if the path tracer is currently processing.
+     *
+     * @return true if the worker is active and not done or cancelled, false otherwise
+     */
+    public boolean isRunning() {
+        return pathTracingWorker != null && !pathTracingWorker.isDone() && !pathTracingWorker.isCancelled();
+    }
+
+    /**
+     * Fire one ray through the pixel at (x,y) and display the path on screen.
+     * @param x the x coordinate of the pixel
+     * @param y the y coordinate of the pixel
+     */
+    public void fireAndDisplayOneRay(int x, int y,int traceDepth) {
+        if(!isRunning()) return;
+        var list = new ArrayList<RayXY>();
+        list.add(fireOneRayWithTracingOn(x,y,traceDepth));
+        showRays(list,true);
+    }
+
+    /**
+     * Fire one ray through the pixel at (x,y)
+     * @param x the x coordinate of the pixel
+     * @param y the y coordinate of the pixel
+     */
+    private RayXY fireOneRayWithTracingOn(int x, int y,int traceDepth) {
+        var ray = getRayForXY(x,y);
+
+        RayXY pixel = new RayXY(x,y,traceDepth);
+        long seed = getSeed(pixel);
+        pixel.halton.resetMemory(seed);
+
+        trace(ray,pixel);
+
+        return pixel;
+    }
+
+    private Ray getRayForXY(int x,int y) {
+        return activeCamera.getRayThroughPoint(
+                (2.0 * x / canvasWidth) - 1.0,
+                1.0 - (2.0 * y / canvasHeight),
+                canvasWidth, canvasHeight);
+    }
+
+    private void showRays(List<RayXY> list,boolean showWholeRay) {
+        if(displayContainer==null) {
+            displayContainer = new Pose();
+            displayContainer.setName("PathTracer Container");
+            Registry.getScene().addChild(displayContainer);
+
+            MeshInstance displayPath = new MeshInstance();
+            displayPath.setName("PathTracer Path");
+            displayContainer.addChild(displayPath);
+
+            var mat = new Material();
+            mat.setLit(false);
+            displayContainer.addChild(mat);
+            //mat.setDiffuseColor(new Color(1,1,1,0.1f));
+
+            displayMesh = new GenerativeMesh();
+            displayPath.setMesh(displayMesh);
+        }
+
+        displayMesh.setRenderStyle(GL3.GL_LINES);
+        displayMesh.clear();
+        Point3d p1 = new Point3d();
+
+        for( var pixel : list) {
+            for (var rayHit : pixel.rayHistory.entrySet()) {
+                Ray ray = rayHit.getKey();
+                Hit hit = rayHit.getValue();
+                Point3d p0 = ray.getOrigin();
+                Vector3d d = ray.getDirection();
+                d.normalize();
+
+
+                if (hit == null) {
+                    p1.scaleAdd(1.0, d, p0);
+                    displayLine(p0,p1,Color.RED,Color.ORANGE);
+                    continue;
+                }
+                /*
+                p1 = h.point();
+                Material mat = RayPickSystem.getMaterial(h.target());
+                displayLine(p0,p1,mat.isEmissive() ? Color.GREEN : Color.YELLOW);
+
+                Point3d p2 = new Point3d(h.normal());
+                p2.add(h.point());
+                displayLine(p1,p2,Color.BLUE);
+                */
+                if(showWholeRay)
+                {
+                    displayLine(hit.point(), p0, new Color(0.2f, 0.2f, 0, 0.1f),new Color(0.2f, 0.2f, 0, 0.1f));
+                }
+
+                p1 = new Point3d();
+                p1.scaleAdd(-1.0,d,hit.point());
+                displayLine(hit.point(),p1,Color.GREEN,Color.CYAN);
+/*
+                p1.scaleAdd(0.5,hit.normal(),hit.point());
+                displayLine(hit.point(),p1,Color.YELLOW);
+//*/
+                var emissiveHitPoint = hitARandomEmissiveSurface(hit,pixel);
+                if(emissiveHitPoint!=null) {
+                    var v1 = new Vector3d();
+                    v1.sub(emissiveHitPoint.point(), hit.point());
+                    v1.normalize();
+                    p1.scaleAdd(1, v1, hit.point());
+                    displayLine(hit.point(), p1, Color.MAGENTA, Color.BLUE);
+                }//*/
+            }
+        }
+    }
+
+    /**
+     * pick a random emissive surface and pick a ray towards it.
+     * @param hit the current hit from which to shoot the ray
+     * @param pixel the pixel to store the ray history in
+     * @return the hit on the emissive surface, or null if none was hit
+     */
+    private Hit hitARandomEmissiveSurface(Hit hit, RayXY pixel) {
+        // pick a random emissive surface
+        Hit randomEmissiveSurface = rayPickSystem.getRandomEmissiveSurface();
+        if(randomEmissiveSurface == null) return null;  // no emissive surfaces
+
+        // get the direction to the emissive surface
+        Vector3d towardsEmissiveSurface = new Vector3d();
+        towardsEmissiveSurface.sub(randomEmissiveSurface.point(), hit.point());
+        towardsEmissiveSurface.normalize();
+
+        // offset the origin a little to avoid self intersection
+        Point3d origin = new Point3d();
+        origin.scaleAdd(EPSILON, hit.normal(), hit.point());
+
+        // shoot a shadow ray to see if the light is visible
+        Ray lightRay = new Ray(origin, towardsEmissiveSurface);
+
+        Hit lightHit = rayPickSystem.getFirstHit(lightRay);
+        if(lightHit!=null && lightHit.target() != randomEmissiveSurface.target()) return null; // hit itself, ignore
+        return lightHit;
+    }
+
+    private void displayLine(Point3d p0, Point3d p1, Color c0,Color c1) {
+        displayMesh.addVertex(p0);
+        displayMesh.addVertex(p1);
+        displayMesh.addColor(c0.getRed(), c0.getGreen(), c0.getBlue(), c0.getAlpha());
+        displayMesh.addColor(c1.getRed(), c1.getGreen(), c1.getBlue(), c1.getAlpha());
+    }
+
+    public void visualize() {
+        if(!isRunning()) return;
+        System.out.println("Visualizing all rays...");
+        var list = new ArrayList<RayXY>();
+
+        int stepSize=20;
+
+        for(int x=0;x<canvasWidth;x+=stepSize) {
+            for(int y=0;y<canvasHeight;y+=stepSize) {
+                list.add(fireOneRayWithTracingOn(x,y,1));
+            }
+        }
+        showRays(list,false);
+    }
+
+    /**
+     * {@link PathTracingWorker} is a SwingWorker that performs the path tracing in the background.  <a
+     * href="https://docs.oracle.com/javase/tutorial/uiswing/concurrency/worker.html">SwingWorkers cannot be reused</a>
+     * so it must be destroyed and recreated each time the path tracer is started.
+     */
+    private class PathTracingWorker extends SwingWorker<Void,Integer> {
         private final List<RayXY> pixels;
         private final BufferedImage image;
 
-        public RayTracingWorker(List<RayXY> pixels,BufferedImage image) {
+        public PathTracingWorker(List<RayXY> pixels, BufferedImage image) {
             this.pixels = pixels;
             this.image = image;
         }
 
         @Override
-        protected Void doInBackground() throws Exception {
-            int total = pixels.size() * samplesPerPixel;
+        protected Void doInBackground() {
             AtomicInteger completed = new AtomicInteger(0);
 
             startTime = System.currentTimeMillis();
 
-            System.out.println("samples per pixel: "+samplesPerPixel + ", max depth: "+maxDepth);
+            while(!isCancelled()) {
+                pixels.stream().parallel().forEach(pixel -> {
+                    if (isCancelled()) return;
 
-            // in parallel, trace each ray and store the result in a buffer
-            while(true) {
-                if(isCancelled()) return null;
+                    pixel.halton.resetMemory(getSeed(pixel));
 
-                rays.stream().parallel().forEach(pixel -> {
-                    if(isCancelled()) return;
-
-                    // jiggle the ray a little bit to get a better anti-aliasing effect
-                    var nx =       (2.0*(pixel.x+random.nextDouble()-0.5)/canvasWidth ) - 1.0;
-                    var ny = 1.0 - (2.0*(pixel.y+random.nextDouble()-0.5)/canvasHeight);
-                    var ray = getRayThroughPoint(activeCamera,nx,ny);
+                    // get the jiggled ray
+                    var ray = getStratifiedSample(pixel);
                     // sum the total color of all samples
-                    pixel.sum.add(trace(ray));
-                    pixel.samples++;
-                    // then get the average of the samples
-                    pixel.average.set(pixel.sum);
-                    pixel.average.scale(1.0/pixel.samples);
-                    toneMap(pixel.average);
+                    trace(ray, pixel);
                     // store the result in the buffer
-                    drawPixel(pixel,pixel.average.getColor());
-
-                    // Update progress
-                    int done = completed.incrementAndGet();
-                    // Optionally only publish occasionally to avoid flooding the EDT
-                    if (done % 100 == 0 || done == total) {
-                        publish((int) ((done * 100.0f) / total));
-
-                        if(done == total) {
-                            cancel(true);
-                        }
-                    }
+                    drawPixel(pixel,pixel.radianceAverage.getColor());
                 });
+                int done = completed.incrementAndGet();
+                publish(done);
+                if (done >= samplesPerPixel) {
+                    cancel(true);
+                }
             }
+
+            return null;
         }
 
         @Override
         protected void process(List<Integer> chunks) {
             // The last value in chunks is the most recent progress value
-            int latestProgress = chunks.get(chunks.size() - 1);
-
-            fireProgressUpdate(latestProgress);
+            fireProgressUpdate(chunks.getLast());
         }
 
         @Override
         protected void done() {
             // Rendering finished
-            rayTracingWorker=null;
+            pathTracingWorker = null;
+            fireFinished();
         }
 
         private void drawPixel(RayXY pixel, Color c) {
             // Convert Ray’s coordinate to pixel indices and set the pixel’s color
             image.setRGB(pixel.x, pixel.y, c.getRGB());
+
+            if(pixel.samples==1) {
+                // Update depth map.  Convert pixel.depth to a rainbow heatmap color
+                if (pixel.depth == Double.POSITIVE_INFINITY) {
+                    // no hit, set to black
+                    depthMap.setRGB(pixel.x, pixel.y, Color.BLACK.getRGB());
+                } else {
+                    double depthValue = Math.max(0, Math.min(1, pixel.depth / deepestHit));
+                    // Convert depth value to a color (e.g., blue for near, red for far)
+                    depthMap.setRGB(pixel.x, pixel.y, unitToRainbow(depthValue).getRGB());
+                }
+            }
+            if(pixel.samples==0) {
+                // update normal map
+                if (pixel.normal != null) {
+                    Color n = new Color((float) (0.5 + 0.5 * pixel.normal.x), (float) (0.5 + 0.5 * pixel.normal.y), (float) (0.5 + 0.5 * pixel.normal.z));
+                    normalMap.setRGB(pixel.x, pixel.y, n.getRGB());
+                }
+            }
         }
+    }
+
+    private long getSeed(RayXY pixel) {
+        long pixelIndex = pixel.x + (long) pixel.y * canvasWidth;
+        long sampleIndex = pixel.samples;
+        long combined = (pixelIndex << 32) | (sampleIndex & 0xffffffffL);
+        return PathTracer.mix64(combined);
+    }
+
+    // Strong 64-bit mix (MurmurHash3 finalizer style)
+    public static long mix64(long z) {
+        z ^= (z >>> 33);
+        z *= 0xff51afd7ed558ccdL;
+        z ^= (z >>> 33);
+        z *= 0xc4ceb9fe1a85ec53L;
+        z ^= (z >>> 33);
+        return z;
+    }
+
+    private Color unitToRainbow(double value) {
+        // Clamp value to [0,1]
+        value = Math.max(0.0, Math.min(1.0, value));
+        // Map value to hue (0 = red, 1 = violet)
+        float hue = (float)(value); // 0.7~0.0 covers red->violet
+        float saturation = 1.0f;
+        float brightness = 1.0f;
+        return Color.getHSBColor(hue, saturation, brightness);
     }
 
     private void getSunlight() {
@@ -470,6 +697,7 @@ public class PathTracer {
         }
 
         sunlightSource.set(env.getSunlightSource());
+        sunlightSource.normalize();
         sunlightColor = new ColorDouble(env.getSunlightColor());
         ambientColor = new ColorDouble(env.getAmbientColor());
         sunlightStrength = env.getSunlightStrength();
@@ -491,17 +719,126 @@ public class PathTracer {
         this.samplesPerPixel = samplesPerPixel;
     }
 
-    public double getAspectRatio() {
-        return (double)canvasWidth/(double)canvasHeight;
-    }
-
     private void fireProgressUpdate(int latestProgress) {
         for( var listener : listeners.getListeners(ProgressListener.class)) {
             listener.onProgressUpdate(latestProgress);
         }
     }
 
-    public void addProgressListener(PathTracerPanel pathTracerPanel) {
-        listeners.add(ProgressListener.class,pathTracerPanel);
+    public void addProgressListener(ProgressListener listener) {
+        listeners.add(ProgressListener.class,listener);
+    }
+
+    public void addPropertyChangeListener(PropertyChangeListener listener) {
+        listeners.add(PropertyChangeListener.class,listener);
+    }
+
+    private void fireStateChange(SwingWorker.StateValue newState) {
+        PropertyChangeEvent pce = null;
+        for( var listener : listeners.getListeners(PropertyChangeListener.class)) {
+            // lazy allocation
+            if(pce==null) pce = new PropertyChangeEvent(this,"state", null,newState);
+            // notify the listener that the path tracing is finished
+            listener.propertyChange(pce);
+        }
+    }
+
+    private void firePending() {
+        fireStateChange(SwingWorker.StateValue.PENDING);
+    }
+
+    private void fireStarted() {
+        fireStateChange(SwingWorker.StateValue.STARTED);
+    }
+
+    private void fireFinished() {
+        fireStateChange(SwingWorker.StateValue.DONE);
+    }
+
+    /**
+     * <p>Get the ray leaving the camera at a given pixel, stratified.  Instead of jiggling the ray
+     * across the entire pixel, the pixel area is divided into an n*n grid, where n=sqrt(total samples).
+     * The ray is then jiggled inside the area of each grid cell.</p>
+     *
+     * @param pixel the {@link RayXY} with the 2d coordinate on the viewport.
+     * @return the jiggled
+     */
+    private Ray getStratifiedSample(RayXY pixel) {
+        int s = pixel.getSamples();
+        // FIX: wrap both indices within the grid
+
+        double jx = pixel.halton.nextDouble(PathTracer.CHANNEL_VIEWPORT_U);
+        double jy = pixel.halton.nextDouble(PathTracer.CHANNEL_VIEWPORT_V);
+        // jiggle the ray a little bit to get a better anti-aliasing effect
+        var nx =       (2.0*(pixel.x+jx)/canvasWidth ) - 1.0;
+        var ny = 1.0 - (2.0*(pixel.y+jy)/canvasHeight);
+        return activeCamera.getRayThroughPoint(nx,ny, canvasWidth, canvasHeight);
+    }
+
+
+    public double getMaxContribution() {
+        return maxContribution;
+    }
+
+    public void setMaxContribution(double limit) {
+        this.maxContribution = Math.max(0,limit);
+    }
+
+    public double getLightSamplingProbability() {
+        return lightSamplingProbability;
+    }
+
+    public void setLightSamplingProbability(double probability) {
+        this.lightSamplingProbability = Math.clamp(probability,0,1);
+    }
+
+    public int getMinBounces() {
+        return minBounces;
+    }
+
+    public void setMinBounces(int count) {
+        this.minBounces = Math.max(1,count);
+    }
+
+    public void setExposure(double arg0) {
+        this.exposure = arg0;
+    }
+
+    public double getExposure() {
+        return exposure;
+    }
+
+    public void setActivateToneMap(boolean activate) {
+        this.activateToneMap = activate;
+    }
+
+    public boolean isActivateToneMap() {
+        return activateToneMap;
+    }
+
+    // Save settings
+    public void savePreferences() {
+        Preferences preferences = Preferences.userNodeForPackage(PathTracer.class);
+
+        preferences.putInt("samplesPerPixel", samplesPerPixel);
+        preferences.putInt("maxDepth", maxDepth);
+        preferences.putInt("minBounces", minBounces);
+        preferences.putDouble("lightSamplingProbability", lightSamplingProbability);
+        preferences.putDouble("maxContribution", maxContribution);
+        preferences.putDouble("exposure", exposure);
+        preferences.putBoolean("activateToneMap", activateToneMap);
+    }
+
+    // Load settings
+    public void loadPreferences() {
+        Preferences preferences = Preferences.userNodeForPackage(PathTracer.class);
+
+        samplesPerPixel = preferences.getInt("samplesPerPixel", samplesPerPixel);
+        maxDepth = preferences.getInt("maxDepth", maxDepth);
+        minBounces = preferences.getInt("minBounces", minBounces);
+        lightSamplingProbability = preferences.getDouble("lightSamplingProbability", lightSamplingProbability);
+        maxContribution = preferences.getDouble("maxContribution", maxContribution);
+        exposure = preferences.getDouble("exposure", exposure);
+        activateToneMap = preferences.getBoolean("activateToneMap", activateToneMap);
     }
 }
